# mini-worker

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_test_summary.py  setup.py
examples/: basic_worker.py  batch_worker.py  integration_example.py  migration_example.py
mini_worker/: __init__.py  base_worker.py  cli.py  manager.py  monitoring.py  utils.py
tests/: __init__.py  test_base_worker.py  test_cli.py  test_cli_integration.py  test_deployment_packaging.py  test_integration_scenarios.py  test_manager.py  test_performance_stress.py
